changed hover, shadows, etc.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <title>Calculator</title>
+    <title>Calcus</title>
   </head>
   <body>
     <div class="calculator">
